--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~48.0.6",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
